feat: add upload stream module
